@@ -17,7 +17,10 @@ along with this software (see the LICENSE.md file). If not, see
         <description>Send Email with settings in EmailTemplate entity record</description>
         <in-parameters>
             <parameter name="emailTemplateId" required="true"/>
-            <parameter name="toAddresses" type="String"/>
+            <parameter name="toAddresses" type="String" required="true">
+                <description>Comma separated list of to email addresses</description></parameter>
+            <parameter name="ccAddresses" type="String"><description>Comma separated list of CC email addresses</description></parameter>
+            <parameter name="bccAddresses" type="String"><description>Comma separated list of BCC email addresses</description></parameter>
             <parameter name="bodyParameters" type="Map"/>
             <parameter name="createEmailMessage" type="Boolean" default="true"/>
         </in-parameters>
